# game_of_life

./: CMakeLists.txt  ConsoleView.cpp  ConsoleView.h  FileService.cpp  FileService.h  Game.cpp  Game.h  main.cpp
controller/: ConsoleController.cpp  ConsoleController.h
gamestate/: CellGrid.cpp  CellGrid.h  GameState.cpp  GameState.h  GameStateBuilder.cpp  GameStateBuilder.h
model/: GameState.cpp  GameState.h
model/builder/: GameStateBuilder.cpp  GameStateBuilder.h
service/: FileService.cpp  FileService.h  Game.cpp  Game.h
view/: ConsoleView.cpp  ConsoleView.h
